--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.0.0",
+    "lucide-react": "^0.563.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
     "reactflow": "^11.11.4",
+    "recharts": "^3.7.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
