--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5",
-    "openai": "^6.16.0"
+    "mongoose": "^9.1.5"
   }
 }
